<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_save">Save</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="no_product_description">No product description</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="title_add_product">Add a product</string>
    <string name="title_order_product">Order product</string>
    <string name="action_order_product">Order</string>

    <string name="dialog_unsaved_changes">Unsaved changes</string>
    <string name="dialog_leave_activity">Leave activity</string>
    <string name="dialog_keep_editing">Keep editing</string>
    <string name="dialog_delete_product">Delete this product?</string>
    <string name="dialog_delete_all">Delete all?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_decrease_quantity">Can not decrease quantity anymore</string>

    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_all_product_info">Please, insert all required information</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="category_overview">Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price $</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_description">Description</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>

</resources>


